service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-cdn-svc
spec:
  selector:
    app: static-cdn
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
