cdn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cdn.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-cdn-svc
            port:
              number: 80
